# vtree

./: .gitignore  Cargo.toml  README.md
src/: error.rs  main.rs  terminal.rs  vtui.rs
src/terminal/: input.rs  mod.rs  parser.rs
src/tree/: core.rs  error.rs  mod.rs  tree_item.rs
src/vtui/: app.rs  history.rs  mod.rs  rich.rs  session.rs  vtui.rs
