[package]
name = "vtree"
version = "0.1.0"
edition = "2021"

[dependencies]
# Json serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"

# rich text formatting
syntect = "5.0"

# CLI parser
structopt = { version = "0.3", default-features = false }

# Open file with default application
open = "3.0.3"

# TUI
tui = "0.19"
crossterm = "0.25"
