[package]
name = "vtree"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"

# Json serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"

# CLI parser
structopt = { version = "0.3", default-features = false }

# Open file with default application
open = "3.0.3"

# TUI
tui = "0.19"
crossterm = "0.25"

# Clipboard
arboard = "3.1.0"
